--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
 	font-family: 'Times New Roman';
 }
 
+.wm-bt:hover {
+	background: #323988 !important;
+}
+
 a.btn_b {
 	width: 250px;
 	height: 48px;
